--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
 .alwaysVisible {
   position: fixed;
   top: 0;
